<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/underwater_splash"
    tools:context=".FinalActivity">

    <TextView
        android:id="@+id/game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textAlignment="center"
        android:text="@string/game_over"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_over"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/play_again"
        android:text="@string/play_again"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_below="@+id/play_again"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

</RelativeLayout>